--- a/docs/rai-use-cases.mdx
+++ b/docs/rai-use-cases.mdx
@@ -1,8 +1,9 @@
 ---
+title: RAI Use Cases
 description: An incomplete list of things you can build with or on top of RAI
 ---
 
-# RAI Use-Cases
+# RAI Use Cases
 
 ### **Unique Money Markets**
 
