--- a/docs/system-contracts/auction-module/debt-auction-house.mdx
+++ b/docs/system-contracts/auction-module/debt-auction-house.mdx
@@ -1,4 +1,5 @@
 ---
+title: Debt Auction House
 description: >-
   Debt auctioneer that covers deficit by minting protocol tokens in exchange for
   system coins
