--- a/docs/system-contracts/auction-module/english-collateral-auction-house.mdx
+++ b/docs/system-contracts/auction-module/english-collateral-auction-house.mdx
@@ -1,4 +1,5 @@
 ---
+title: English Collateral Auction House
 description: English collateral auctioneer that tries to recapitalize the system
 ---
 
