--- a/docs/system-contracts/auction-module/fixed-discount-collateral-auction-house.mdx
+++ b/docs/system-contracts/auction-module/fixed-discount-collateral-auction-house.mdx
@@ -1,4 +1,5 @@
 ---
+title: Fixed Discount Collateral Auction House
 description: >-
   Auctioneer that tries to recapitalize the system by selling collateral at a
   discounted price
