--- a/docs/system-contracts/auction-module/surplus-auction-house.mdx
+++ b/docs/system-contracts/auction-module/surplus-auction-house.mdx
@@ -1,4 +1,5 @@
 ---
+title: Surplus Auction House
 description: >-
   Surplus auctioneer that sells extra stability fees in exchange for protocol
   tokens
