--- a/docs/system-contracts/oracle-module/fsm/dampened-security-module.mdx
+++ b/docs/system-contracts/oracle-module/fsm/dampened-security-module.mdx
@@ -1,4 +1,5 @@
 ---
+title: Dampened Security Module
 description: >-
   An OSM-like contract that bounds price feed changes between consecutive
   updates
