--- a/docs/system-contracts/oracle-module/medianizer/governance-led-median.mdx
+++ b/docs/system-contracts/oracle-module/medianizer/governance-led-median.mdx
@@ -1,4 +1,5 @@
 ---
+title: Governance Led Median
 description: >-
   Medianizer that depends on governance token holders to whitelist off-chain
   oracles
