--- a/docs/system-contracts/sustainability-module/increasing-treasury-reimbursement.mdx
+++ b/docs/system-contracts/sustainability-module/increasing-treasury-reimbursement.mdx
@@ -1,4 +1,5 @@
 ---
+title: Increasing Treasury Reimbursement
 description: >-
   Integration contract meant to offer an increasing reward pulled from the SF
   treasury
