--- a/docs/system-contracts/sustainability-module/mandatory-fixed-treasury-reimbursement.mdx
+++ b/docs/system-contracts/sustainability-module/mandatory-fixed-treasury-reimbursement.mdx
@@ -1,4 +1,5 @@
 ---
+title: Mandatory Fixed Treasury Reimbursement
 description: Integration contract meant to offer a fixed reward pulled from the SF treasury
 ---
 
