--- a/docs/system-contracts/token-module/README.mdx
+++ b/docs/system-contracts/token-module/README.mdx
@@ -1,4 +1,5 @@
 ---
+title: Token Module
 description: >-
   ERC20 tokens, authority contracts and adapters for exiting and joining
   collateral in an out of the system
