--- a/docs/system-contracts/token-module/protocol-token-printing-permissions.mdx
+++ b/docs/system-contracts/token-module/protocol-token-printing-permissions.mdx
@@ -1,4 +1,5 @@
 ---
+title: Protocol Token Printing Permissions
 description: >-
   Contract allowing multiple independent debt auction houses to print protocol
   tokens
