--- a/docs/the-money-god-league/deployment-guidelines.mdx
+++ b/docs/the-money-god-league/deployment-guidelines.mdx
@@ -1,3 +1,7 @@
+---
+title: Steps to deploy a RAI fork
+---
+
 # Steps to deploy a RAI fork.
 
 This document outlines the steps to deploy an instance of the GEB Protocol. It's goal is not to provide extensive information on each of the steps (the readme files on each repository have detailed information) but to be a general guide on the steps to run a successful fork and the repositories where the code of the several parts of the protocol reside.
