--- a/docs/system-contracts/auction-module/increasing-discount-collateral-auction-house.mdx
+++ b/docs/system-contracts/auction-module/increasing-discount-collateral-auction-house.mdx
@@ -1,4 +1,5 @@
 ---
+title: Increasing Discount Collateral Auction House
 description: >-
   Auctioneer that tries to recapitalize the system by selling collateral at an
   increasing discount
