--- a/docs/community-resources.mdx
+++ b/docs/community-resources.mdx
@@ -7,7 +7,8 @@ description: List of talks and articles about RAI and Reflexer
 
 ### Videos
 
-* [Testnet Walkthrough](https://www.youtube.com/watch?v=RebhR9OCLZs) November 2023
+* [Testnet Walkthrough](https://youtu.be/HutnkLydeWw?feature=shared) November 2023
+* [Code4rena Audit](https://youtu.be/YPBLVoSwg6w?feature=shared) November 2023
 * [ChainLeak Podcast](https://youtube.com/watch?v=AFZYf-Z_r0E) October 2023
 
 ### Articles 
