--- a/docs/Liquidations.mdx
+++ b/docs/Liquidations.mdx
@@ -3,7 +3,8 @@ title: Liquidations
 description: ''
 ---
 
-\*\*\*\*![](</img/Liquidatons Image.png>)\
+<img src="./img/Liquidatons Image.png" alt="Liquidations" />
+
 **Overview**
 
 If the value of the collateral in a vault falls below the minimum collateral ratio liquidation can occur. This process protects the protocol from insolvency risks.
