--- a/docs/proxy-infrastructure/od-proxy.mdx
+++ b/docs/proxy-infrastructure/od-proxy.mdx
@@ -5,7 +5,7 @@ description: Execute transactions with the use of a proxy
 
 # ODProxy
 
-**Smart contract code:** [**ODProxy**](https://github.com/UseKeyp/od-contracts/blob/main/src/contracts/proxies/ODProxy.sol)****
+**Smart contract code:** [**ODProxy**](https://github.com/UseKeyp/od-contracts/blob/main/src/contracts/proxies/ODProxy.sol)
 
 ## 1. Summary <a href="#1-introduction-summary" id="1-introduction-summary"></a>
 
