--- a/docs/system-contracts/core/safe-engine.mdx
+++ b/docs/system-contracts/core/safe-engine.mdx
@@ -150,7 +150,7 @@ The core Vault, Coin, and collateral state is kept in the `SafeEngine`. The `Saf
 
 1. **Coin cannot exist without collateral:**
 
-* A `collteralType` is a particular type of collateral.
+* A `collateralType` is a particular type of collateral.
 * Collateral `collateral` is assigned to users with `modifyCollateralBalance`.
 * Collateral `collateral` is transferred between users with `transferCollateral`.
 
