--- a/docs/DebtAuctions.mdx
+++ b/docs/DebtAuctions.mdx
@@ -2,7 +2,8 @@
 title: "Debt\_Auctions"
 ---
 
-![](</img/Debt Auction Image.png>)\
+<img src="./img/Debt Auction Image.png" alt="Debt Auction Image" />
+
 Debt auctions mint and auction new $ODG in exchange for $OD. The $OD that is received by an auction will be used to eliminate bad (uncovered) debt from the system.
 
 **How do I bid?**
