--- a/docs/NFT-Vaults-Overview.mdx
+++ b/docs/NFT-Vaults-Overview.mdx
@@ -4,8 +4,10 @@ description: ''
 ---
 
 
-Open Dollar NFT Vaults (NFVs) are a new primitive in DeFi and a unique feature of the Open Dollar protocol.\
-![](</img/NFT Vaults Overview Image.png>)\
+Open Dollar NFT Vaults (NFVs) are a new primitive in DeFi and a unique feature of the Open Dollar protocol.
+
+<img src="./img/NFT Vaults Overview Image.png" alt="NFT vaults Overview Image" />
+
 These vaults are represented as NFTs, making each vault distinct and transferable. This feature marks a significant evolution from traditional CDPs. Unlike traditional CDPs, where ownership is tied to an account, Open Dollar uses NFVs, which associate ownership of the collateral to NFTs. By doing so, the debt is locked in the protocol, but its ownership is not.
 
 ## Features
@@ -14,8 +16,9 @@ These vaults are represented as NFTs, making each vault distinct and transferabl
 * Dynamic display images and metadata: NFV images show the current status, health, collateral, and debt of the vault with time-stamped updates.
 * Direct Wallet Management: Users can directly manage and track their CDPs from their wallets, bypassing the need for interacting with the protocol's front end.
 * Composability and Cross-Chain Capability: Facilitates easy batch-transfers and asset ownership transfers, along with efficient cross-chain compatibility.
-* Enhanced Visibility and Tracking: Integrates with wallet aggregators and portfolio trackers for dynamic pricing and updated insights.\
-  ![](</img/NFT vaults Features Image.png>)
+* Enhanced Visibility and Tracking: Integrates with wallet aggregators and portfolio trackers for dynamic pricing and updated insights.
+
+<img src="./img/NFT vaults Features Image.png" alt="NFT vaults Features Image" />
 
 ## Benefits
 
