fix image links

--- a/docs/Borrowing.mdx
+++ b/docs/Borrowing.mdx
@@ -9,7 +9,7 @@ The first time you connect your wallet to the Open Dollar app you’ll be prompt
 
 Click “Create a Vault” and select your collateral type and amount to deposit.
 
-![](</img/Borrowing OD Image.png>)
+<img src="./img/Borrowing OD Image.png" alt="Borrowing OD Image.png" />
 
 Once you’ve created a vault, the amount of OD you can borrow depends on the Minimum Collateral Ratio (MCR) of your deposited assets.
 
