--- a/docs/Liquidations.mdx
+++ b/docs/Liquidations.mdx
@@ -3,7 +3,7 @@ title: Liquidations
 description: ''
 ---
 
-![](</img/Liquidatons Image.png>)
+<img src="./img/Liquidatons Image.png" alt="Liquidations" />
 
 **Overview**
 
