--- a/docs/NFT-Vaults-Overview.mdx
+++ b/docs/NFT-Vaults-Overview.mdx
@@ -5,7 +5,7 @@ description: ''
 
 Open Dollar NFT Vaults (NFVs) are a new primitive in DeFi and a unique feature of the Open Dollar protocol.
 
-![](</img/NFT Vaults Overview Image.png>)
+<img src="./img/NFT Vaults Overview Image.png" alt="NFT vaults Overview Image" />
 
 These vaults are represented as NFTs, making each vault distinct and transferable. This feature marks a significant evolution from traditional CDPs. Unlike traditional CDPs, where ownership is tied to an account, Open Dollar uses NFVs, which associate ownership of the collateral to NFTs. By doing so, the debt is locked in the protocol, but its ownership is not.
 
@@ -17,7 +17,7 @@ These vaults are represented as NFTs, making each vault distinct and transferabl
 * Composability and Cross-Chain Capability: Facilitates easy batch-transfers and asset ownership transfers, along with efficient cross-chain compatibility.
 * Enhanced Visibility and Tracking: Integrates with wallet aggregators and portfolio trackers for dynamic pricing and updated insights.
 
-![](</img/NFT vaults Features Image.png>)
+<img src="./img/NFT vaults Features Image.png" alt="NFT vaults Features Image" />
 
 ## Benefits
 
