--- a/docs/Open-Dollar-Protocol-Overview.mdx
+++ b/docs/Open-Dollar-Protocol-Overview.mdx
@@ -5,7 +5,7 @@ description: ''
 
 # Using Open Dollar
 
-![](</img/Using Open Dollar Graphic.png>)
+<img src="./img/Using Open Dollar Graphic.png" alt="Using Open Dollar Graphic" />
 
 The Open Dollar platform allows you to easily borrow the OD stablecoin against your LST or other supported Arbitrum-native assets and create leveraged positions at low rates while retaining 100% of the yields of your deposited collateral.
 
