--- a/docs/Surplus-Auctions.mdx
+++ b/docs/Surplus-Auctions.mdx
@@ -2,7 +2,8 @@
 title: Surplus Auctions
 ---
 
-![](</img/Surplus Auction Image.png>)\
+<img src="./img/Surplus Auction Image.png" alt="Surplus Auction Image" />
+
 Surplus auctions sell OD that has accrued inside the protocol in exchange for ODG. The ODG that is received by an auction is burned.
 
 **How do I bid?**
