--- a/docs/CollateralAuctions.mdx
+++ b/docs/CollateralAuctions.mdx
@@ -2,7 +2,7 @@
 title: "Collateral\_Auctions"
 ---
 
-![](</img/Collateral Auction Image.png>)
+<img src="./img/Collateral Auction Image.png" alt="Collateral Auction Image" />
 
 Collateral auctions are meant to sell collateral that was seized from a vault in exchange for OD. The OD that is received by an auction is burned.
 
