--- a/docs/How-OD-Stays-Stable.mdx
+++ b/docs/How-OD-Stays-Stable.mdx
@@ -6,7 +6,8 @@ If the price of OD deviates from its $1.00 peg, the PID Controller adjusts the r
 
 The following are two scenarios and how this works:
 
-![How OD Stays Stable](</img/How OD stays stable Image 1.png>)![](</img/How OD stays Stable Image 2.png>)
+<img src="./img/How OD stays stable Image 1.png" alt="How OD stays stable Image 1" />
+<img src="./img/How OD stays Stable Image 2.png" alt="How OD stays Stable Image 2" />
 
 If the market price is greater than the redemption price, the redemption rate turns negative. A negative redemption rate lowers the redemption price.
 
@@ -14,7 +15,9 @@ Since OD is now cheaper inside the protocol compared to the market, borrowing po
 
 Example: If the redemption price of OD decreases by 0.2%, users can leverage their collateral to borrow 0.2% more OD from Open Dollar. They then sell their OD at market price, earning a profit from the price deviation, and protecting themselves from a drop in the token’s value following the negative redemption rate.
 
-![](</img/How OD stays Stable Image 3.png>)![](</img/How OD stays Stable Image 4.png>)
+<img src="./img/How OD stays stable Image 3.png" alt="How OD stays stable Image 3" />
+
+<img src="./img/How OD stays Stable Image 4.png" alt="How OD stays Stable Image 4" />
 
 This process also works in reverse. If the market price of OD falls below the redemption price, the redemption rate turns positive. This increases the price of accumulated debt which causes users to buy more OD from secondary markets to pay it down. It also incentivizes them to buy more OD with the expectation that the market price will follow a similar trajectory to the redemption price.
 
