--- a/docs/Supported-Collaterals.mdx
+++ b/docs/Supported-Collaterals.mdx
@@ -5,9 +5,11 @@ description: An overview of Supported Collaterals on the Open Dollar protocol.
 
 ### Introduction
 
-This page contains the up to date list of supported LST collaterals in the Open Dollar protocol at launch.
+This page contains the up to date list of supported LST collaterals in the Open Dollar protocol at launch. All collateral types have gone through rigorous quality research.
 
 ### Collaterals
+
+#### wstETH 
 
 [wstETH](https://arbiscan.io/token/0x5979D7b546E38E414F7E9822514be443A4800529) - Lido Wrapped liquid staked Ether 2.0
 
@@ -15,26 +17,18 @@ Token Address: 0x5979D7b546E38E414F7E9822514be443A4800529
 
 Minimum Collateral Ratio: 135%
 
-[cbETH](https://arbiscan.io/token/0x1debd73e752beaf79865fd6446b0c970eae7732f) - Coinbase Wrapped Staked ETH
+Stability Fee: 2% APR or less
 
-Token Address: 0x1DEBd73E752bEaF79865Fd6446b0c970EaE7732f
-
-Minimum Collateral Ratio: 150%
-
+#### rETH
 [rETH](https://arbiscan.io/token/0xec70dcb4a1efa46b8f2d97c310c9c4790ba5ffa8) - Rocket Pool ETH
 
 Token Address: 0xEC70Dcb4A1EFa46b8F2D97C310C9c4790ba5ffA8
 
-Minimum Collateral Ratio: 150%
+Minimum Collateral Ratio: 135%
 
-[MAGIC](https://arbiscan.io/token/0x539bde0d7dbd336b79148aa742883198bbf60342) - Treasure DAO
+Stability Fee: 2% APR or less
 
-Token Address: 0x539bdE0d7Dbd336b79148AA742883198BBF60342
+### Future Plans
 
-Minimum Collateral Ratio: 150%
-
-[ARB](https://arbiscan.io/token/0x912ce59144191c1204e64559fe8253a0e49e6548) - Arbitrum
-
-Token Address: 0x912CE59144191C1204E64559FE8253a0e49E6548
-
-Minimum Collateral Ratio: 150%
+Other collateral types that could be added in the future include other high quality LSTs like Coinbase Wrapped Staked ETH, and other Arbitrum native tokens with deep liquidity like ARB token.
+Higher fees and collateralization ratios will be required based on risk assessments of the assets. Although, the ODG governance token holders have the final say on what collaterals are added. If the DAO adds new types of collaterals or new vault types with existing ones, those governance proposals are always subject to the Time Lock Delay, which gives users time to exit the protocol if they choose before changes come into effect. This is an additional layer of security. 
