remove references to magic and others

--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -27,11 +27,8 @@ At the same time, a managed float can cause uncertainty due to the fact that the
 Initially, popular Liquid Staking Tokens and some Arbitrum native assets can be used to borrow OD against:
 - [wstETH](https://www.coingecko.com/en/coins/wrapped-steth)
 - [rETH](https://www.coingecko.com/en/coins/rocket-pool-eth)
-- [cbETH](https://www.coingecko.com/en/coins/coinbase-wrapped-staked-eth)
-- [ARB](https://www.coingecko.com/en/coins/arbitrum)
-- [MAGIC](https://www.coingecko.com/en/coins/magic)
 
-More assets will be added as the community sees fit. We aim to be extremely flexible and fast to adopt new LSTs and high quality collateral.
+More assets will be added as the community sees fit, with certain security parameters built in.
 
 ### How can more collateral types be added?
 A DAO controlled by Open Dollar Governance (ODG) token holders can add more types of collateral at any time through voting.
