--- a/docs/Borrowing.mdx
+++ b/docs/Borrowing.mdx
@@ -13,7 +13,7 @@ Click “Create a Vault” and select your collateral type and amount to deposit
 
 Once you’ve created a vault, the amount of OD you can borrow depends on the Minimum Collateral Ratio (MCR) of your deposited assets.
 
-For collateral types like ARB, MAGIC, rETH, and cETH, a collateral ratio of 150% is mandated, while for wstETH, the required collateral ratio is set at 135%. This ensures that the minted OD is sufficiently backed by collateral, maintaining the protocol's stability and security.
+Initially, vaults for wstETH and rETH will be available with overcollateralization ratio requirementes of 135%. This ensures that the minted OD is sufficiently backed by collateral, maintaining the protocol's stability and security.
 
 Input the desired amount of OD to borrow and click “approve” to approve your deposit. Then, click “Review Transaction” to confirm and complete.
 
