new sidebars.js

--- a/docs/Proposals-and-Voting---Coming-soon.mdx
+++ b/docs/Proposals-and-Voting---Coming-soon.mdx
@@ -1,5 +1,5 @@
 ---
-title: Proposals and Voting - “Coming soon”
+title: Proposals and Voting
 ---
 
 Details coming soon after an official announcement. 
