--- a/docs/The-ODG-Token---Coming-soon.mdx
+++ b/docs/The-ODG-Token---Coming-soon.mdx
@@ -1,5 +1,5 @@
 ---
-title: The ODG Token - “Coming soon”
+title: The ODG Token
 ---
 
 Coming soon - Follow us on our socials and subscribe to our newsletter to be among the first to know!
