--- a/docs/testnet-guide.mdx
+++ b/docs/testnet-guide.mdx
@@ -1,5 +1,5 @@
 ---
-title: Testnet App Walkthrough
+title: Testnet App Guide
 description: A guide for using the Open Dollar testnet application.
 ---
 
